feat(mcp): manage multi-host SHAFT guidance #4394